# Python-Cooperative-Synapse-NeuroEvolution

./: CMakeLists.txt
src/: main.cpp  network.cpp  network.hpp
